Add aggregation.